[package]
name = "reclaim-rust-sdk"
version = "0.1.0"
edition = "2021"
authors = ["Kushal Shah <kushal@creatoros.co>"]
description = "A Rust SDK for Reclaim Protocol"
license = "MIT"
repository = "https://github.com/yourusername/reclaim-rust-sdk"
documentation = "https://docs.reclaimprotocol.org/"
readme = "README.md"
keywords = ["reclaim", "blockchain", "verification", "proof"]
categories = ["cryptography", "authentication"]

[dependencies]
ethers = { version = "2.0", features = ["rustls"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha2 = "0.10"
hex = "0.4"
log = "0.4"
tokio = { version = "1.0", features = ["full", "macros"] }
async-trait = "0.1"
thiserror = "2.0.3"
anyhow = "1.0"
url = "2.4"
rustc-hex = "2.1"
web3 = "0.19.0"

[dev-dependencies]
tokio = { version = "1.0", features = ["full"] }
serde_json = "1.0"

[[example]]
name = "basic_usage"
path = "examples/basic_usage.rs"
